src/components/Front/Front.css
.Front {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 100vh;
  margin-bottom: 100px;
  z-index: 1;
  overflow: hidden;
}

.Front::before {
  content: "";
  position: absolute;
  top: -5px;
  background-image: linear-gradient(
      to right,
      rgba(1, 1, 1, 0.75),
      rgba(1, 1, 1, 0.75)
    ),
    url("../../images/coverPhoto.png");
  background-repeat: no-repeat, no-repeat;
  background-position: center;
  background-size: cover;
  z-index: -1;
  height: 100vh;
  width: 100vw;
}

.Hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.TextLogo {
  align-self: center;
  height: auto;
  width: 50vw;
  padding-bottom: 1vw;
}

.HeroText {
  width: 60%;
  text-align: center;
}

h1 {
  color: white;
}

@media only screen and (max-width: 2560px) {
  h1 {
    font-size: 2vw;
  }
}

@media only screen and (max-width: 1440px) {
  h1 {
    font-size: 3vw;
  }
}

@media only screen and (max-width: 1080px) {
  h1 {
    font-size: 4vw;
  }
}

@media only screen and (max-width: 425px) {
  .TextLogo {
    align-self: center;
    height: auto;
    width: 90vw;
    padding-bottom: 1vw;
  }

  h1 {
    font-size: 5.5vw;
  }
}

